--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "complexity-report": "^2.0.0-alpha",
     "eslint": "^7.29.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
